--- a/src/client/View/CreateEventView.fxml
+++ b/src/client/View/CreateEventView.fxml
@@ -1,14 +1,211 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="client.View.CreateEventView"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox prefHeight="681.0" prefWidth="657.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label alignment="CENTER" prefHeight="70.0" prefWidth="658.0" text="Create an event">
+         <font>
+            <Font size="41.0" />
+         </font>
+      </Label>
+      <HBox prefHeight="41.0" prefWidth="596.0">
+         <children>
+            <Label prefHeight="62.0" prefWidth="104.0" text=" Title :">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Label>
+            <TextField fx:id="titleTextField" prefHeight="41.0" prefWidth="527.0" promptText="Enter the title of the event here." />
+         </children>
+      </HBox>
+      <Label text=" " />
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label alignment="TOP_CENTER" prefHeight="39.0" prefWidth="172.0" text="Description :">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="descriptionArea" prefHeight="100.0" prefWidth="457.0" promptText="Optional, you can leave it empty." />
+         </children>
+      </HBox>
+      <Label text=" " />
+      <HBox prefHeight="37.0" prefWidth="578.0">
+         <children>
+            <Label prefHeight="66.0" prefWidth="76.0" text=" Start :">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="startDate" prefHeight="37.0" prefWidth="204.0" promptText="Date" />
+            <Label prefHeight="15.0" prefWidth="90.0" text=" " />
+            <Label prefHeight="37.0" prefWidth="87.0" text="Time :">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Label>
+            <SplitMenuButton fx:id="hourMenuS" mnemonicParsing="false" prefHeight="37.0" prefWidth="77.0" text="Hour">
+               <items>
+                  <MenuItem fx:id="HS9" mnemonicParsing="false" text="9" />
+                  <MenuItem fx:id="HS10" mnemonicParsing="false" text="10" />
+                  <MenuItem fx:id="HS11" mnemonicParsing="false" text="11" />
+                  <MenuItem fx:id="HS12" mnemonicParsing="false" text="12" />
+                  <MenuItem fx:id="HS13" mnemonicParsing="false" text="13" />
+                  <MenuItem fx:id="HS14" mnemonicParsing="false" text="14" />
+                  <MenuItem fx:id="HS15" mnemonicParsing="false" text="15" />
+                  <MenuItem fx:id="HS16" mnemonicParsing="false" text="16" />
+               </items>
+            </SplitMenuButton>
+            <Label prefHeight="37.0" prefWidth="12.0" text=" :" />
+            <SplitMenuButton fx:id="minuteMenuS" mnemonicParsing="false" prefHeight="37.0" prefWidth="87.0" text="Minute">
+               <items>
+                  <MenuItem fx:id="MS00" mnemonicParsing="false" text="00" />
+                  <MenuItem fx:id="MS15" mnemonicParsing="false" text="15" />
+                  <MenuItem fx:id="MS30" mnemonicParsing="false" text="30" />
+                  <MenuItem fx:id="MS45" mnemonicParsing="false" text="45" />
+               </items>
+            </SplitMenuButton>
+         </children>
+      </HBox>
+      <Label text=" " />
+      <HBox prefHeight="49.0" prefWidth="578.0">
+         <children>
+            <Label prefHeight="30.0" prefWidth="76.0" text=" End :">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="endDate" prefHeight="37.0" prefWidth="204.0" promptText="Date" />
+            <Label prefHeight="15.0" prefWidth="90.0" text=" " />
+            <Label prefHeight="37.0" prefWidth="87.0" text="Time :">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Label>
+            <SplitMenuButton fx:id="hourMenuE" mnemonicParsing="false" prefHeight="37.0" prefWidth="77.0" text="Hour">
+               <items>
+                  <MenuItem fx:id="HE9" mnemonicParsing="false" text="9" />
+                  <MenuItem fx:id="HE10" mnemonicParsing="false" text="10" />
+                  <MenuItem fx:id="HE11" mnemonicParsing="false" text="11" />
+                  <MenuItem fx:id="HE12" mnemonicParsing="false" text="12" />
+                  <MenuItem fx:id="HE13" mnemonicParsing="false" text="13" />
+                  <MenuItem fx:id="HE14" mnemonicParsing="false" text="14" />
+                  <MenuItem fx:id="HE15" mnemonicParsing="false" text="15" />
+                  <MenuItem fx:id="HE16" mnemonicParsing="false" text="16" />
+               </items>
+            </SplitMenuButton>
+            <Label prefHeight="37.0" prefWidth="12.0" text=" :" />
+            <SplitMenuButton fx:id="minuteMenuE" mnemonicParsing="false" prefHeight="37.0" prefWidth="87.0" text="Minute">
+               <items>
+                  <MenuItem fx:id="ME00" mnemonicParsing="false" text="00" />
+                  <MenuItem fx:id="ME15" mnemonicParsing="false" text="15" />
+                  <MenuItem fx:id="ME30" mnemonicParsing="false" text="30" />
+                  <MenuItem fx:id="ME45" mnemonicParsing="false" text="45" />
+               </items>
+            </SplitMenuButton>
+         </children>
+      </HBox>
+      <Label prefHeight="28.0" prefWidth="636.0" text="   Note : You can only choose work time(from 9:00 to 17:00) !" textFill="RED" />
+      <Label text=" " />
+      <HBox alignment="CENTER" pickOnBounds="false" prefHeight="39.0" prefWidth="651.0">
+         <children>
+            <Label prefHeight="39.0" prefWidth="143.0" text=" Online / Physical :">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <Label prefHeight="15.0" prefWidth="29.0" text=" " />
+            <Button fx:id="onlineButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="142.0" text="Online">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+            <Label prefHeight="15.0" prefWidth="50.0" text=" " />
+            <Button fx:id="physicalButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="142.0" text="Physical">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+      <Label text=" " />
+      <HBox prefHeight="37.0" prefWidth="657.0">
+         <children>
+            <Label text=" " />
+            <Label prefHeight="54.0" prefWidth="199.0" text="Room (For physical only) :">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <SplitMenuButton fx:id="roomMenu" mnemonicParsing="false" prefHeight="37.0" prefWidth="187.0" text="Room">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </SplitMenuButton>
+         </children>
+      </HBox>
+      <Label text=" " />
+      <HBox prefHeight="35.0" prefWidth="657.0">
+         <children>
+            <Label text=" " />
+            <Label prefHeight="35.0" prefWidth="201.0" text="Platform (For online only) :">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <SplitMenuButton fx:id="platformMenu" mnemonicParsing="false" prefHeight="37.0" prefWidth="187.0" text="Platform">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Discord" />
+                <MenuItem mnemonicParsing="false" text="Zoom" />
+                  <MenuItem mnemonicParsing="false" text="Teams" />
+              </items>
+            </SplitMenuButton>
+         </children>
+      </HBox>
+      <Label text=" " />
+      <HBox prefHeight="35.0" prefWidth="657.0">
+         <children>
+            <Label text=" " />
+            <Label prefHeight="44.0" prefWidth="223.0" text="Link for meeting (Online only) :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="linkTextField" prefHeight="34.0" prefWidth="411.0" promptText="Optional, you can add it later." />
+         </children>
+      </HBox>
+      <HBox prefHeight="12.0" prefWidth="657.0" />
+      <HBox alignment="CENTER_RIGHT" prefHeight="51.0" prefWidth="631.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="102.0" text="Cancel">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Label prefHeight="15.0" prefWidth="35.0" text=" " />
+            <Button fx:id="createButton" mnemonicParsing="false" prefHeight="42.0" prefWidth="102.0" text="Create">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Label prefHeight="15.0" prefWidth="27.0" text=" " />
+         </children>
+      </HBox>
+      <HBox prefHeight="19.0" prefWidth="657.0">
+         <children>
+            <Label text=" " />
+            <Label fx:id="errorLabel" prefHeight="22.0" prefWidth="646.0" text="errorlabel" textFill="RED" />
+         </children>
+      </HBox>
+   </children>
+</VBox>
