--- a/src/client/View/CreateRoomView.fxml
+++ b/src/client/View/CreateRoomView.fxml
@@ -13,16 +13,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="640.0" stylesheets="@darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="633.0" stylesheets="@darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="662.0" text="Add a room" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font size="28.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-      </Label>
+      <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Add a room" textAlignment="CENTER">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
       <GridPane prefHeight="199.0" prefWidth="499.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.4000244140625" minWidth="10.0" prefWidth="155.0" />
@@ -44,7 +45,7 @@
                   <Label text="Room code:" />
                </children>
             </HBox>
-            <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
                   <Label alignment="CENTER_RIGHT" text="Floor:" />
                </children>
@@ -68,7 +69,7 @@
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
                   <TextField prefHeight="26.0" prefWidth="252.0" />
-                  <Button minWidth="-Infinity" mnemonicParsing="false" text="Add" textAlignment="CENTER">
+                  <Button minWidth="-Infinity" mnemonicParsing="false" stylesheets="@darkTheme.css" text="Add" textAlignment="CENTER">
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin></Button>
