--- a/src/client/View/CreateRoomView.fxml
+++ b/src/client/View/CreateRoomView.fxml
@@ -13,95 +13,105 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="633.0" stylesheets="@darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0">
-         <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" text="Add a room" textAlignment="CENTER">
-               <font>
-                  <Font size="32.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      <GridPane prefHeight="199.0" prefWidth="499.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.4000244140625" minWidth="10.0" prefWidth="155.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="466.7999954223633" minWidth="10.0" prefWidth="326.40003662109376" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="466.7999954223633" minWidth="10.0" prefWidth="155.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Room code:" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
-               <children>
-                  <Label alignment="CENTER_RIGHT" text="Floor:" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
-               <children>
-                  <Label alignment="CENTER_RIGHT" text="Building address:" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="4">
-               <children>
-                  <Label text="Number of seats:" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="5">
-               <children>
-                  <Label text="Add equipment:" />
-               </children>
-            </HBox>
-            <TextField maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1" />
-            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-               <children>
-                  <TextField prefHeight="26.0" prefWidth="252.0" />
-                  <Button minWidth="-Infinity" mnemonicParsing="false" stylesheets="@darkTheme.css" text="Add" textAlignment="CENTER">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin></Button>
-               </children>
-            </HBox>
-            <Label text="List of equpment:" GridPane.rowIndex="6" />
-            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-         </children>
-         <VBox.margin>
-            <Insets left="30.0" right="30.0" />
-         </VBox.margin>
-      </GridPane>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <ScrollPane maxWidth="-Infinity" prefHeight="313.0" prefWidth="356.0">
-               <content>
-                  <ListView prefHeight="400.0" prefWidth="340.0" />
-               </content>
-            </ScrollPane>
-            <HBox alignment="CENTER" prefHeight="146.0" prefWidth="560.0" />
-            <Button alignment="CENTER_RIGHT" contentDisplay="BOTTOM" mnemonicParsing="false" text="Remove selected">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-   </children>
-   <padding>
-      <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
-   </padding>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0"
+      prefWidth="633.0" stylesheets="@darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.CreateRoomViewController">
+    <children>
+        <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0">
+            <children>
+                <Label alignment="CENTER" contentDisplay="CENTER" text="Add a room" textAlignment="CENTER">
+                    <font>
+                        <Font size="32.0"/>
+                    </font>
+                </Label>
+            </children>
+        </HBox>
+        <GridPane prefHeight="199.0" prefWidth="499.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.4000244140625" minWidth="10.0" prefWidth="155.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="466.7999954223633" minWidth="10.0"
+                                   prefWidth="326.40003662109376"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="466.7999954223633" minWidth="10.0" prefWidth="155.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <children>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                    <children>
+                        <Label text="Room code:"/>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                    <children>
+                        <Label alignment="CENTER_RIGHT" text="Floor:"/>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                    <children>
+                        <Label alignment="CENTER_RIGHT" text="Building address:"/>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="4">
+                    <children>
+                        <Label text="Number of seats:"/>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="5">
+                    <children>
+                        <Label text="Add equipment:"/>
+                    </children>
+                </HBox>
+                <TextField fx:id="roomCode" maxWidth="1.7976931348623157E308" prefHeight="26.0"
+                           promptText="Example: A201" GridPane.columnIndex="1"/>
+                <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                    <children>
+                        <TextField fx:id="equipmentToAdd" prefHeight="26.0" prefWidth="252.0"/>
+                        <Button minWidth="-Infinity" mnemonicParsing="false" stylesheets="@darkTheme.css" text="Add"
+                                textAlignment="CENTER">
+                            <HBox.margin>
+                                <Insets left="5.0"/>
+                            </HBox.margin>
+                        </Button>
+                    </children>
+                </HBox>
+                <Label text="List of equpment:" GridPane.rowIndex="6"/>
+                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1"
+                      GridPane.rowIndex="6"/>
+                <TextField fx:id="floor" maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1"
+                           GridPane.rowIndex="1"/>
+                <TextField fx:id="address" maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1"
+                           GridPane.rowIndex="2"/>
+                <TextField fx:id="numberOfSeats" maxWidth="1.7976931348623157E308" prefHeight="26.0"
+                           GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            </children>
+            <VBox.margin>
+                <Insets left="30.0" right="30.0"/>
+            </VBox.margin>
+        </GridPane>
+        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+            <children>
+                <ScrollPane maxWidth="-Infinity" prefHeight="313.0" prefWidth="356.0">
+                    <content>
+                        <ListView fx:id="equipmentList" prefHeight="400.0" prefWidth="340.0"/>
+                    </content>
+                </ScrollPane>
+                <HBox alignment="CENTER" prefHeight="146.0" prefWidth="560.0"/>
+                <Button alignment="CENTER_RIGHT" contentDisplay="BOTTOM" mnemonicParsing="false" text="Remove selected">
+                    <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Button>
+            </children>
+        </VBox>
+    </children>
+    <padding>
+        <Insets bottom="10.0" left="20.0" right="20.0" top="10.0"/>
+    </padding>
 </VBox>
