--- a/src/client/View/CreateRoomView.fxml
+++ b/src/client/View/CreateRoomView.fxml
@@ -3,8 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -42,7 +43,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label text="Room code:" />
+                  <Label text="Room number:" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
@@ -65,7 +66,7 @@
                   <Label text="Add equipment:" />
                </children>
             </HBox>
-            <TextField fx:id="roomCode" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: A201" GridPane.columnIndex="1" />
+            <TextField fx:id="roomNumber" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: A201" GridPane.columnIndex="1" />
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
                   <TextField fx:id="equipmentToAdd" prefHeight="26.0" prefWidth="252.0" promptText="Example: Projector BENQ FullHD" />
@@ -75,7 +76,6 @@
                      </HBox.margin></Button>
                </children>
             </HBox>
-            <Label text="List of equpment:" GridPane.rowIndex="6" />
             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <TextField fx:id="floor" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: 2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="address" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: Chr M Østergaards Vej 4, 8700 Horsens" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -87,9 +87,13 @@
       </GridPane>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <ScrollPane maxWidth="-Infinity" prefHeight="313.0" prefWidth="356.0">
+            <ScrollPane maxWidth="-Infinity" prefHeight="356.0" prefWidth="356.0">
                <content>
-                  <ListView fx:id="equipmentList" prefHeight="400.0" prefWidth="340.0" />
+                  <TableView fx:id="equipmentList" prefHeight="400.0" prefWidth="340.0">
+                    <columns>
+                      <TableColumn fx:id="equipmentColumn" editable="false" minWidth="-1.0" prefWidth="339.19998478889465" text="List of equipment" />
+                    </columns>
+                  </TableView>
                </content>
             </ScrollPane>
             <HBox alignment="CENTER" prefHeight="146.0" prefWidth="560.0" />
@@ -100,6 +104,15 @@
             </Button>
          </children>
       </VBox>
+      <HBox alignment="CENTER_RIGHT">
+         <children>
+            <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
