--- a/src/client/View/Room/CreateRoomView.fxml
+++ b/src/client/View/Room/CreateRoomView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="633.0" stylesheets="@darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.CreateRoomViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="633.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Room.CreateRoomViewController">
    <children>
       <HBox alignment="CENTER" prefHeight="39.0" prefWidth="600.0">
          <children>
@@ -70,7 +70,7 @@
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
                   <TextField fx:id="equipmentToAdd" prefHeight="26.0" prefWidth="252.0" promptText="Example: Projector BENQ FullHD" />
-                  <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#addButton" stylesheets="@darkTheme.css" text="Add" textAlignment="CENTER">
+                  <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#addButton" stylesheets="@../darkTheme.css" text="Add" textAlignment="CENTER">
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin></Button>
