--- a/src/client/View/Room/RoomListView.fxml
+++ b/src/client/View/Room/RoomListView.fxml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="428.0" prefWidth="746.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Room.RoomListViewController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="774.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Room.RoomListViewController">
    <children>
       <HBox alignment="CENTER">
          <children>
@@ -67,88 +57,103 @@
             </GridPane>
          </children>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="274.0" prefWidth="600.0">
+      <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
-            <ScrollPane>
-               <content>
-                  <TableView fx:id="roomTable">
-                    <columns>
-                      <TableColumn fx:id="roomIDColumn" prefWidth="66.39998948574066" text="Room ID" />
-                      <TableColumn fx:id="roomNumberColumn" minWidth="-1.0" prefWidth="105.60001373291016" text="Room number" />
-                        <TableColumn fx:id="floorColumn" prefWidth="40.79998779296875" text="Floor" />
-                        <TableColumn fx:id="seatsColumn" minWidth="0.0" prefWidth="41.59999084472656" text="Seats" />
-                        <TableColumn fx:id="addressColumn" prefWidth="336.0000305175781" text="Building address" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-               </content>
-            </ScrollPane>
-            <VBox alignment="CENTER">
+            <HBox alignment="CENTER" prefHeight="274.0" prefWidth="600.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#openButton" prefWidth="88.8" text="Open">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#editButton" prefWidth="88.8" text="Edit">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </VBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#removeButton" text="Remove">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </VBox.margin>
-                  </Button>
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-      <GridPane>
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <HBox alignment="BOTTOM_LEFT">
-               <children>
-                  <Label fx:id="errorLabel" text="errorLabel" textFill="RED" />
+                  <ScrollPane>
+                     <content>
+                        <TableView fx:id="roomTable">
+                          <columns>
+                            <TableColumn fx:id="roomIDColumn" prefWidth="66.39998948574066" text="Room ID" />
+                            <TableColumn fx:id="roomNumberColumn" minWidth="-1.0" prefWidth="105.60001373291016" text="Room number" />
+                              <TableColumn fx:id="floorColumn" prefWidth="40.79998779296875" text="Floor" />
+                              <TableColumn fx:id="seatsColumn" minWidth="0.0" prefWidth="41.59999084472656" text="Seats" />
+                              <TableColumn fx:id="addressColumn" prefWidth="336.0000305175781" text="Building address" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </content>
+                  </ScrollPane>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#openButton" prefWidth="88.8" text="Open">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#addButton" prefWidth="88.8" text="Add">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#editButton" prefWidth="88.8" text="Edit">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#removeButton" prefWidth="88.8" text="Remove">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="1">
+            <GridPane prefHeight="40.0" prefWidth="714.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.39999389648438" minWidth="0.0" prefWidth="0.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="357.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="357.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="48.7999267578125" minWidth="0.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" onAction="#backButton" prefWidth="88.8" text="Back">
-                     <font>
-                        <Font size="19.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-                     </HBox.margin>
-                  </Button>
+                  <HBox alignment="BOTTOM_LEFT" GridPane.columnIndex="1">
+                     <children>
+                        <Label fx:id="errorLabel" text="errorLabel" textFill="RED" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="2">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#backButton" prefWidth="88.8" text="Back">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </HBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0" />
                </children>
-               <GridPane.margin>
-                  <Insets />
-               </GridPane.margin>
-            </HBox>
+               <VBox.margin>
+                  <Insets bottom="10.0" top="20.0" />
+               </VBox.margin>
+            </GridPane>
          </children>
-         <VBox.margin>
-            <Insets bottom="10.0" top="10.0" />
-         </VBox.margin>
-      </GridPane>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" />
