--- a/src/client/View/Room/RoomListView.fxml
+++ b/src/client/View/Room/RoomListView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="774.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Room.RoomListViewController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="769.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Room.RoomListViewController">
    <children>
       <HBox alignment="CENTER">
          <children>
@@ -59,11 +59,11 @@
       </HBox>
       <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="274.0" prefWidth="600.0">
+            <HBox alignment="CENTER">
                <children>
                   <ScrollPane>
                      <content>
-                        <TableView fx:id="roomTable">
+                        <TableView fx:id="roomTable" prefHeight="423.0" prefWidth="593.0">
                           <columns>
                             <TableColumn fx:id="roomIDColumn" prefWidth="66.39998948574066" text="Room ID" />
                             <TableColumn fx:id="roomNumberColumn" minWidth="-1.0" prefWidth="105.60001373291016" text="Room number" />
@@ -84,7 +84,7 @@
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              <Insets bottom="15.0" left="10.0" right="10.0" />
                            </VBox.margin>
                         </Button>
                         <Button mnemonicParsing="false" onAction="#addButton" prefWidth="88.8" text="Add">
@@ -92,7 +92,7 @@
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
                            </VBox.margin>
                         </Button>
                         <Button mnemonicParsing="false" onAction="#editButton" prefWidth="88.8" text="Edit">
@@ -100,7 +100,7 @@
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
                            </VBox.margin>
                         </Button>
                         <Button mnemonicParsing="false" onAction="#removeButton" prefWidth="88.8" text="Remove">
@@ -108,52 +108,31 @@
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#backButton" prefWidth="88.8" text="Back">
+                           <font>
+                              <Font size="19.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" top="15.0" />
                            </VBox.margin>
                         </Button>
                      </children>
                   </VBox>
                </children>
             </HBox>
-            <GridPane prefHeight="40.0" prefWidth="714.0">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="83.39999389648438" minWidth="0.0" prefWidth="0.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="357.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="357.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="48.7999267578125" minWidth="0.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <HBox alignment="BOTTOM_LEFT" GridPane.columnIndex="1">
-                     <children>
-                        <Label fx:id="errorLabel" text="errorLabel" textFill="RED" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="2">
-                     <children>
-                        <Button mnemonicParsing="false" onAction="#backButton" prefWidth="88.8" text="Back">
-                           <font>
-                              <Font size="19.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-                           </HBox.margin>
-                        </Button>
-                     </children>
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </HBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="10.0" top="20.0" />
-               </VBox.margin>
-            </GridPane>
          </children>
       </VBox>
+      <HBox alignment="BOTTOM_LEFT">
+         <children>
+            <Label fx:id="errorLabel" text="errorLabel" textFill="RED" />
+         </children>
+         <VBox.margin>
+            <Insets top="25.0" />
+         </VBox.margin>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" />
