--- a/src/client/View/Employee/EmployeeView.fxml
+++ b/src/client/View/Employee/EmployeeView.fxml
@@ -71,22 +71,30 @@
                   <Label text="Role:" />
                </children>
             </HBox>
-            <TextField fx:id="username" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: johndoe8" GridPane.columnIndex="1">
+            <TextField fx:id="username" maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets bottom="2.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="name" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: John" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField fx:id="password" maxWidth="1.7976931348623157E308" onKeyTyped="#passwordTyped" prefHeight="26.0" promptText="Type the password here" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="2.0" top="2.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="repeatPassword" maxWidth="1.7976931348623157E308" onKeyTyped="#repeatPasswordTyped" prefHeight="26.0" promptText="Must be the same" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="2.0" top="2.0" />
+               </GridPane.margin></TextField>
+            <TextField fx:id="name" maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="2.0" top="2.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="surname" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: Doe" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <TextField fx:id="surname" maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets top="2.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="role" maxWidth="1.7976931348623157E308" prefHeight="26.0" promptText="Example: CFO Chief financial officier" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <TextField fx:id="role" maxWidth="1.7976931348623157E308" prefHeight="26.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets bottom="2.0" />
                </GridPane.margin>
@@ -101,8 +109,6 @@
                   <Label fx:id="passwordLabel" text="Password: " />
                </children>
             </HBox>
-            <TextField fx:id="password" maxWidth="1.7976931348623157E308" onKeyTyped="#passwordTyped" prefHeight="26.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="repeatPassword" maxWidth="1.7976931348623157E308" onKeyTyped="#repeatPasswordTyped" prefHeight="26.0" promptText="Must be the same" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <GridPane prefHeight="390.0" prefWidth="832.0">
@@ -169,14 +175,14 @@
                         <ChoiceBox fx:id="choiceBox" maxWidth="-Infinity" prefHeight="26.0" prefWidth="302.0" />
                         <Button fx:id="addButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#addButton" stylesheets="@../darkTheme.css" text="Add" textAlignment="CENTER">
                            <HBox.margin>
-                              <Insets left="5.0" top="2.0" />
+                              <Insets bottom="5.0" left="5.0" top="2.0" />
                            </HBox.margin>
                         </Button>
                      </children>
                   </HBox>
                </children>
                <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
+                  <Insets bottom="10.0" left="5.0" right="5.0" />
                </GridPane.margin>
             </VBox>
             <HBox alignment="CENTER">
